--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -5,3 +5,6 @@
 @import 'bloc/header';
 @import 'bloc/about';
 @import 'bloc/do';
+@import 'bloc/client';
+@import 'bloc/footer';
+@import 'bloc/modal';
