--- a/src/scss/bloc/_global.scss
+++ b/src/scss/bloc/_global.scss
@@ -44,6 +44,10 @@ body {
     text-align: center;
     letter-spacing: 0.04em;
     color: #FFFFFF;
+
+    &_form {
+        width: 100%;
+    }
 }
 
 .title {
@@ -53,4 +57,27 @@ body {
     letter-spacing: 0.05em;
     color: #316099;
     max-width: 360px;
+
+    &_white {
+        color: #fff;
+    }
+}
+
+.divider {
+    position: relative;
+    width: 100%;
+    height: 1px;
+    background-color: rgba(#fff, .4);
+    margin: 96px 0;
+
+    &::before {
+        position: absolute;
+        content: '';
+        width: 100%;
+        height: 1px;
+        transform: translateX(-100%);
+        background-color: rgba(#fff, .4);
+        top: 0;
+        left: 0;
+    }
 }
