--- a/src/scss/bloc/_modal.scss
+++ b/src/scss/bloc/_modal.scss
@@ -9,6 +9,13 @@
     left: 0;
     background-color: rgba(#fff, .4);
 
+    &__closed {
+        position: absolute;
+        top: 25px;
+        right: 25px;
+        cursor: pointer;
+    }
+
     &__title {
         font-size: 20px;
         line-height: 30px;
@@ -69,4 +76,29 @@
             margin-bottom: 8px;
         }
     }
+}
+
+.modal {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    top: 50%;
+    right: 50%;
+    transform: translateY(-50%) translateX(50%);
+    width: 300px;
+    height: 150px;
+    color: #000;
+    font-size: 20px;
+    text-align: center;
+    background: #fff;
+    box-shadow: 5px 10px 50px rgba(16, 112, 177, 0.2);
+    border-radius: 10px;
+    text-align: center;
+    align-self: center;
+
+}
+
+.show {
+    display: block;
 }
