--- a/src/scss/bloc/_modal.scss
+++ b/src/scss/bloc/_modal.scss
@@ -1,12 +1,12 @@
-.form {
-    display: none;
+.modal {
     position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 1050;
+    display: none;
     width: 100%;
     height: 100%;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
+    overflow: hidden;
     background-color: rgba(#fff, .4);
 
     &__closed {
@@ -22,21 +22,28 @@
         letter-spacing: 0.04em;
         color: #1F3F68;
         margin-bottom: 48px;
+
+        &_mt {
+            margin-top: 20px;
+        }
     }
 
     &__wrapper {
-        position: absolute;
-        top: 50%;
-        right: 50%;
-        transform: translateY(-50%) translateX(50%);
-        display: flex;
-        flex-direction: column;
-        width: 540px;
-        height: 800px;
-        background: #fff;
+        max-width: 500px;
+        margin: 40px auto;
+        background: #ffffff;
         box-shadow: 5px 10px 50px rgba(16, 112, 177, 0.2);
         border-radius: 10px;
-        padding: 56px;
+    }
+
+    &__inner {
+        position: relative;
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        max-height: 80vh;
+        overflow-y: auto;
+        padding: 40px;
 
         input,
         textarea {
@@ -78,27 +85,10 @@
     }
 }
 
-.modal {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    position: absolute;
-    top: 50%;
-    right: 50%;
-    transform: translateY(-50%) translateX(50%);
-    width: 300px;
-    height: 150px;
-    color: #000;
-    font-size: 20px;
-    text-align: center;
-    background: #fff;
-    box-shadow: 5px 10px 50px rgba(16, 112, 177, 0.2);
-    border-radius: 10px;
-    text-align: center;
-    align-self: center;
-
-}
-
 .show {
     display: block;
+}
+
+.hide {
+    display: none;
 }
